--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html,
@@ -8,15 +9,42 @@ body {
     height: 100%;
 }
 
+@media screen and (max-width:500px) {
+    html {
+        font-size: 50px;
+    }
+}
+
+@media screen and (min-width:501px) {
+    html {
+        font-size: 60px;
+    }
+}
+
+@media screen and (min-width:800px) {
+    html {
+        font-size: 80px;
+    }
+}
+
+@media screen and (min-width:1000px) {
+    html {
+        font-size: 100px;
+    }
+}
+
 .box {
-    width: 800px;
-    height: 600px;
+    min-width: 100%;
+    /*height: 6rem; */
+    /* width: 100%; */
+    /* height: 90%; */
     background-color: rgb(236, 221, 240);
     /* background-color: #c3c2c4; */
     position: absolute;
-    top: 50%;
+    /* top: 50%; */
     left: 50%;
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
+    transform: translateX(-50%);
     border-radius: 10px;
     padding: 10px;
 }
@@ -27,20 +55,32 @@ body {
     background-color: rgb(211, 202, 214);
 }
 
+.top select {
+    width: 150px;
+    height: 30px;
+    display: block;
+}
+
 .container {
-    width: 100%;
-    height: 485px;
+    min-width: 8rem;
+    /* min-height: 95%; */
+    min-height: 4.85rem;
     background-color: white;
     margin: 10px 0;
+    overflow: auto;
+    padding-bottom: 50px;
 }
 
 .container .tab ul {
-    clear: both;
+    /* clear: both; */
+    height: 30px;
 }
 
 .container .tab li {
     width: 30px;
     height: 30px;
+    /* width: 0.3rem;
+    height: 0.3rem; */
     list-style: none;
     border-top: 2px solid whitesmoke;
     border-left: 2px solid whitesmoke;
@@ -49,22 +89,27 @@ body {
     line-height: 30px;
     text-align: center;
     float: left;
+    font-size: 0.16rem;
 }
 
 .bottom {
-    width: 770px;
+    width: 100%;
     height: 50px;
+    /* width: 7.7rem;
+    height: 0.5rem; */
     background-color: rgb(211, 202, 214);
-    font: normal bold 18px/50px 'misrosoft yehei';
-    padding: 0 15px;
+    font: normal bold 0.18rem/50px 'misrosoft yehei';
+    padding: 0 30px;
+    position: fixed;
+    bottom: 0;
 }
 
 .bottom p {
-    width: 150px;
+    width: 1.5rem;
     height: 48px;
     border: 1px solid #000;
     float: left;
-    padding-left: 20px;
+    padding-left: 0.2rem;
 }
 
 .bottom .bottomRight {
@@ -109,8 +154,8 @@ body {
 }
 
 .mask .result-box {
-    width: 800px;
-    height: 600px;
+    width: 8rem;
+    height: 6rem;
     border-radius: 10px;
     border: 1px solid rgb(33, 33, 33);
     background-color: rgb(250, 250, 250);
@@ -121,18 +166,20 @@ body {
 }
 
 .mask .result-box h1 {
-    height: 100px;
-    line-height: 100px;
+    height: 1rem;
+    line-height: 1rem;
     text-align: center;
+    font-size: 0.5rem;
 }
 
 .mask .result-box p {
     text-align: center;
+    font-size: 0.16rem;
 }
 
 .mask .result-box button {
-    width: 100px;
-    height: 50px;
+    width: 2rem;
+    height: 0.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
