--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body {
     /* transform: translate(-50%, -50%); */
     transform: translateX(-50%);
     border-radius: 10px;
-    padding: 10px;
+    padding: 10px 15px 10px 20px;
 }
 
 .top {
